--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@mui/material": "^5.12.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/axios": "^0.14.0",
+    "@types/json-server": "^0.14.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/sass": "^1.45.0",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "formik": "^2.2.9",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
